--- a/cli/template/package.json
+++ b/cli/template/package.json
@@ -1,36 +1,31 @@
 {
-  "name": "create-t3-turbo",
+  "name": "create-t3-turbo-app",
   "private": true,
   "engines": {
     "node": ">=v18.16.0"
   },
   "packageManager": "pnpm@8.4.0",
   "scripts": {
-    "cli:build": "turbo build --filter=./cli",
-    "cli:dev": "turbo dev --filter=./cli",
-    "cli:start": "turbo dev --filter=./cli",
-    "template:db:generate": "turbo db:generate --filter=./cli/template/packages/db",
-    "template:db:push": "turbo db:push db:generate --filter=./cli/template/packages/db",
-    "template:dev": "turbo dev --parallel --filter=./cli/template/apps/* --filter=./cli/template/packages/*",
+    "build": "turbo build",
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo clean",
+    "db:generate": "turbo db:generate",
+    "db:push": "turbo db:push db:generate",
+    "dev": "turbo dev --parallel",
     "format": "prettier --write \"**/*.{js,cjs,mjs,ts,tsx,md,json}\" --ignore-path .gitignore",
     "lint": "turbo lint && manypkg check",
     "lint:fix": "turbo lint:fix && manypkg fix",
     "type-check": "turbo type-check"
   },
   "dependencies": {
+    "@acme/eslint-config": "^0.1.0",
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
     "@manypkg/cli": "^0.20.0",
-    "@types/eslint": "^8.37.0",
     "@types/prettier": "^2.7.2",
     "eslint": "^8.40.0",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "turbo": "^1.9.3",
     "typescript": "^5.0.4"
-  },
-  "devDependencies": {
-    "expo": "^48.0.16"
   }
 }
